--- a/index.html
+++ b/index.html
@@ -110,15 +110,11 @@ textarea, input[type="date"] {
 }
 .diary-actions button:hover, #addDiaryBtn:hover { background:linear-gradient(135deg,#007aff,#5ac8fa); }
 
-/* 圣诞树容器 */
-#xmasTreeContainer { position:fixed; left:20px; top:50%; transform:translateY(-50%); width:200px; height:400px; cursor:pointer; z-index:9; }
-
 /* 响应式 */
 @media(max-width:600px){
   header img{width:100px;height:100px;}
   .card{width:90%;}
   nav a{margin:0 8px; font-size:14px;}
-  #xmasTreeContainer{display:none;}
 }
 </style>
 </head>
@@ -128,8 +124,6 @@ textarea, input[type="date"] {
   <source src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/Video%20Project%204.mp4?raw=true" type="video/mp4">
 </video>
 <canvas id="particles"></canvas>
-
-<div id="xmasTreeContainer"></div>
 
 <header>
   <img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233412_9_79.jpg?raw=true" alt="头像">
@@ -180,9 +174,6 @@ textarea, input[type="date"] {
 
 <footer>&copy; 2025 Happyma.top</footer>
 <div id="qrModal"><img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233522_10_79.jpg?raw=true" alt="微信二维码大图"></div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
 
 <script>
 // ---------------- 日记 ----------------
@@ -318,100 +309,92 @@ window.addEventListener('scroll', () => {
         } else { link.classList.remove('active'); }
     });
 });
-
-// ---------------- Three.js 圣诞树 ----------------
-let scene, camera, renderer, treeGroup, controls;
-const container = document.getElementById('xmasTreeContainer');
-initXmasTree();
-function initXmasTree(){
-  scene = new THREE.Scene();
-  camera = new THREE.PerspectiveCamera(50, container.clientWidth/container.clientHeight, 0.1, 1000);
-  camera.position.set(0,1.5,5);
-  renderer = new THREE.WebGLRenderer({alpha:true, antialias:true});
-  renderer.setSize(container.clientWidth, container.clientHeight);
-  renderer.setPixelRatio(window.devicePixelRatio);
-  renderer.shadowMap.enabled = true;
-  container.appendChild(renderer.domElement);
-
-  // 灯光
-  const ambient = new THREE.AmbientLight(0xffffff,0.6);
-  scene.add(ambient);
-  const dirLight = new THREE.DirectionalLight(0xffffff,0.8);
-  dirLight.position.set(5,10,5);
-  dirLight.castShadow = true;
-  scene.add(dirLight);
-
-  // 圣诞树组
-  treeGroup = new THREE.Group();
-  scene.add(treeGroup);
-
-  // 树干
-  const trunkGeo = new THREE.CylinderGeometry(0.1,0.15,0.5,16);
-  const trunkMat = new THREE.MeshStandardMaterial({color:0x8B4513});
-  const trunk = new THREE.Mesh(trunkGeo,trunkMat);
-  trunk.position.y=0.25;
-  treeGroup.add(trunk);
-
-  // 树叶
-  const coneMat = new THREE.MeshStandardMaterial({color:0x008000, flatShading:true});
-  for(let i=0;i<3;i++){
-    const coneGeo = new THREE.ConeGeometry(0.5-0.1*i,0.8,16);
-    const cone = new THREE.Mesh(coneGeo, coneMat);
-    cone.position.y = 0.5+0.4*i;
-    treeGroup.add(cone);
-  }
-
-  // 星星
-  const starGeo = new THREE.OctahedronGeometry(0.15);
-  const starMat = new THREE.MeshStandardMaterial({color:0xFFFF00, emissive:0xFFFF00});
-  const star = new THREE.Mesh(starGeo, starMat);
-  star.position.y=1.9;
-  treeGroup.add(star);
-
-  // 礼盒
-  const boxColors=[0xff0000,0x0000ff,0xffff00,0xffa500];
-  for(let i=0;i<4;i++){
-    const boxGeo = new THREE.BoxGeometry(0.3,0.3,0.3);
-    const boxMat = new THREE.MeshStandardMaterial({color:boxColors[i]});
-    const box = new THREE.Mesh(boxGeo,boxMat);
-    const angle = (i/4)*Math.PI*2;
-    box.position.set(Math.cos(angle)*0.7,0.15,Math.sin(angle)*0.7);
-    treeGroup.add(box);
-  }
-
-  // 控制
-  controls = new THREE.OrbitControls(camera, renderer.domElement);
-  controls.enableZoom = false;
-  controls.enablePan = false;
-  controls.autoRotate = true;
-  controls.autoRotateSpeed = 0.5;
-  controls.enableDamping = true;
-
-  window.addEventListener('resize', onWindowResize);
-  container.addEventListener('click', toggleTreeScale);
-  animate();
-}
-
-let isBig=false;
-function toggleTreeScale(){
-  isBig = !isBig;
-  const targetScale = isBig?2:1;
-  gsap.to(treeGroup.scale,{x:targetScale,y:targetScale,z:targetScale,duration:0.5});
-  gsap.to(controls,{autoRotateSpeed:isBig?2:0.5,duration:0.5});
-}
-
-function onWindowResize(){
-  camera.aspect=container.clientWidth/container.clientHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(container.clientWidth, container.clientHeight);
-}
-
-function animate(){
-  requestAnimationFrame(animate);
-  controls.update();
-  renderer.render(scene,camera);
-}
 </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.15.1/gsap.min.js"></script>
 </body>
 </html>
+<!-- 圣诞树卡片 -->
+<div id="treeCard" style="position:fixed; left:20px; top:50%; transform:translateY(-50%); width:400px; height:600px; background:rgba(255,255,255,0.6); backdrop-filter:blur(20px); border-radius:25px; box-shadow:0 8px 30px rgba(0,0,0,0.1); z-index:2; cursor:pointer;">
+  <div id="treeContainer" style="width:100%; height:100%; border-radius:25px; overflow:hidden;"></div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
+<script>
+let scene, camera, renderer, treeParticles=[], treeContainer=document.getElementById('treeContainer'), treeCard=document.getElementById('treeCard'), isTreeExpanded=false;
+
+scene = new THREE.Scene();
+camera = new THREE.PerspectiveCamera(50, 400/600, 0.1, 1000);
+camera.position.z = 200;
+renderer = new THREE.WebGLRenderer({ alpha:true, antialias:true });
+renderer.setSize(400,600);
+treeContainer.appendChild(renderer.domElement);
+
+// 生成圣诞树粒子
+function generateTreeParticles(){
+    const geometry = new THREE.BufferGeometry();
+    const positions = [];
+    const colors = [];
+    const color = new THREE.Color();
+    const layers = 25;
+    for(let y=0;y<layers;y++){
+        const layerWidth = (layers - y)*8;
+        const layerHeight = 600/layers;
+        const numParticles = 60;
+        for(let i=0;i<numParticles;i++){
+            const x = (Math.random()-0.5)*layerWidth;
+            const z = (Math.random()-0.5)*layerWidth;
+            const yy = y*layerHeight - 300;
+            positions.push(x, yy, z);
+            color.setHSL(0.33 + Math.random()*0.1,0.8,0.4 + Math.random()*0.2); // 闪烁绿色
+            colors.push(color.r,color.g,color.b);
+        }
+    }
+    geometry.setAttribute('position', new THREE.Float32BufferAttribute(positions,3));
+    geometry.setAttribute('color', new THREE.Float32BufferAttribute(colors,3));
+    const material = new THREE.PointsMaterial({ size:5, vertexColors:true });
+    const points = new THREE.Points(geometry, material);
+    scene.add(points);
+    treeParticles.push(points);
+}
+generateTreeParticles();
+
+// 树顶星星
+const starGeom = new THREE.SphereGeometry(10,16,16);
+const starMat = new THREE.MeshBasicMaterial({color:0xffdd00});
+const star = new THREE.Mesh(starGeom, starMat);
+star.position.y = 320;
+scene.add(star);
+
+// 礼盒
+function generateGifts(){
+    const giftGeom = new THREE.BoxGeometry(20,20,20);
+    const giftMat = new THREE.MeshBasicMaterial({color:0xff4444});
+    const gift1 = new THREE.Mesh(giftGeom,giftMat); gift1.position.set(-60,-280,0); scene.add(gift1);
+    const gift2 = gift1.clone(); gift2.position.set(40,-280,20); scene.add(gift2);
+}
+generateGifts();
+
+// 动画
+function animateTree(){
+    requestAnimationFrame(animateTree);
+    treeParticles.forEach(p=>{
+        p.rotation.y += 0.001;
+        // 随机闪烁
+        p.material.size = 4 + Math.sin(Date.now()*0.005)*2;
+    });
+    star.rotation.y += 0.003;
+    star.scale.setScalar(1 + Math.sin(Date.now()*0.01)*0.3); // 星星闪烁
+    renderer.render(scene,camera);
+}
+animateTree();
+
+// 点击放大旋转
+treeCard.addEventListener('click',()=>{
+    if(!isTreeExpanded){
+        treeCard.style.transform='translateY(-50%) scale(1.3) rotate(15deg)';
+        isTreeExpanded=true;
+    } else {
+        treeCard.style.transform='translateY(-50%) scale(1) rotate(0deg)';
+        isTreeExpanded=false;
+    }
+});
+</script>
